# Multi-Prompt-Agent

./: .env.example  .gitignore  README.md  multi_prompt_agent.py  pyproject.toml  run_agent.py  schema.json  schema_validation.py
agents_configs/: customer_support.json  default.json  real_estate_agent.json
utils/: logger.py
